fixed nav bar UI out of place

--- a/assets/components/components.css
+++ b/assets/components/components.css
@@ -59,6 +59,7 @@ footer{
   padding: 5px;
   height: 50px;
   width: 60px;
+  display: none;
   opacity: 0;
 }
 
@@ -86,6 +87,7 @@ footer{
 
   .logo {
     opacity: 1;
+    display: block;
   }
 
   .dropdown button {
@@ -131,7 +133,7 @@ footer{
 
 /* FOR PC USERS */
 @media only screen and (min-width: 600px) {
-  .header {
+  #navbar {
     padding: 0.2vw;
     margin: 0px;
     display: flex;
@@ -158,4 +160,6 @@ footer{
   .dropdown-content {
     display: flex;
   }
+
+  
 }
